# elbrusconsult

./: .env.example  .gitignore  AGENTS.md  README.md
backend/: manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
backend/apps/blog/: admin.py  feeds.py  models.py  sitemaps.py  urls.py  views.py
backend/apps/contact/: admin.py  forms.py  models.py  urls.py  views.py
backend/apps/core/: admin.py  admin_site.py  apps.py  attribution.py  context_processors.py  middleware.py  models.py  net.py  sanitize.py  schema.py  seo.py  sitemaps.py  utils.py  views.py
backend/apps/newsletter/: admin.py  forms.py  models.py  services.py  urls.py  views.py
backend/apps/pages/: admin.py  apps.py  models.py  sitemaps.py  urls.py  views.py
backend/apps/scheduling/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/elbrus/: asgi.py  urls.py  wsgi.py
backend/elbrus/settings/: base.py  dev.py  prod.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/static/src/: app.js  consent.js  styles.css
backend/templates/: base.html
backend/templates/admin/: elbrus_index.html
backend/templates/blog/: detail.html  list.html
backend/templates/contact/: contact.html  thanks.html
backend/templates/core/: ratelimited.html
backend/templates/newsletter/: confirmed.html  pending.html  subscribe.html  unsubscribed.html
backend/templates/pages/: about.html  ads_engine.html  home.html  privacy.html  service_detail.html  service_list.html  terms.html
backend/templates/partials/: _advisory_phone.html  _analytics_body.html  (+8 more)
(+87 files in other folders)
